@@ -2401,6 +2401,14 @@ enum eSeedEffect {
     NUM_SEEDS = 80
 };
 
+enum SuplexState {
+	INACTIVE = 0,	
+	DASHING = 1,
+	AIMING = 2,
+	ASCENDING = 3,	
+	DESCENDING = 4
+};
+
 	// For address "literals" in LibZHL, it's best to define them here to avoid clashing with the parser more than needed
 	static void* wglSwapBuffersAddr = GetProcAddress(GetModuleHandle("opengl32.dll"), "wglSwapBuffers");
 }}
